Persist redux state, Adding Login and Registration Information  for Users